<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_button"
            android:id="@+id/refresh_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/slider"
            android:text="@string/x_scale_slider_label"
            android:textColor="@color/white"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:max="55"
            android:id="@+id/slider" />

    </LinearLayout>


    <android.support.v7.widget.GridLayout
        xmlns:grid="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        grid:rowCount="2"
        grid:columnCount="2">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartBP"
            android:layout_width="0dp"
            android:layout_height="0dp"
            grid:layout_row="0"
            grid:layout_column="0"
            grid:layout_rowWeight="70"
            grid:layout_columnWeight="75"
            background="@color/black"/>

        <android.support.v7.widget.GridLayout
            xmlns:grid="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="0dp"
            grid:rowCount="5"
            grid:columnCount="2"
            grid:layout_row="0"
            grid:layout_column="1"
            grid:layout_rowWeight="70"
            grid:layout_columnWeight="25">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sbpdbp_textfield"
                android:text="@string/sbp_dbp"
                android:textColor="@color/red"
                android:textSize="30sp"
                grid:layout_row="0"
                grid:layout_column="0"
                grid:layout_columnSpan="2"
                android:paddingBottom="10dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AvgDepth"
                android:labelFor="@+id/avgdepth_textfield"
                android:textColor="@color/white"
                grid:layout_row="1"
                grid:layout_column="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/avgdepth_textfield"
                android:textColor="@color/white"
                grid:layout_row="1"
                grid:layout_column="1"
                grid:paddingStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AvgLeaningDepth"
                android:labelFor="@+id/avgleaningdepth_textfield"
                android:textColor="@color/white"
                grid:layout_row="2"
                grid:layout_column="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/avgleaningdepth_textfield"
                android:textColor="@color/white"
                grid:layout_row="2"
                grid:layout_column="1"
                android:paddingStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/C02"
                android:labelFor="@+id/c02_textfield"
                android:textColor="@color/cyan"
                grid:layout_row="3"
                grid:layout_column="0"
                android:paddingTop="10dp"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/c02_textfield"
                android:textColor="@color/cyan"
                grid:layout_row="3"
                grid:layout_column="1"
                android:paddingBottom="10dp"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BPM"
                android:labelFor="@+id/bpm_textfield"
                android:textColor="@color/green"
                grid:layout_row="4"
                grid:layout_column="0"
                android:paddingTop="10dp"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bpm_textfield"
                android:textColor="@color/green"
                grid:layout_row="4"
                grid:layout_column="1"
                android:paddingBottom="10dp"
                android:textSize="20sp"/>
        </android.support.v7.widget.GridLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartEndTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            grid:layout_row="1"
            grid:layout_column="0"
            grid:layout_rowWeight="30"
            grid:layout_columnWeight="75"
            android:background="@color/black"/>

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chartDepth"
            android:layout_width="0dp"
            android:layout_height="0dp"
            grid:layout_row="1"
            grid:layout_column="1"
            grid:layout_rowWeight="30"
            grid:layout_columnWeight="25"
            android:background="@color/black"/>

    </android.support.v7.widget.GridLayout>



</LinearLayout>
